--- a/app/src/main/res/layout/frag_exercise_description.xml
+++ b/app/src/main/res/layout/frag_exercise_description.xml
@@ -16,18 +16,18 @@
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="206dp">
 
                 <ImageView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     app:srcCompat="@mipmap/ic_launcher"
                     android:id="@+id/ex_imagebefore"
                     android:layout_weight="50" />
 
                 <ImageView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     app:srcCompat="@mipmap/ic_launcher"
                     android:id="@+id/ex_imageafter"
                     android:layout_weight="50" />
@@ -37,7 +37,7 @@
             <TextView
                 android:text="TextView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:id="@+id/ex_descriptiontext"
                 android:layout_weight="1"
                 android:textSize="16sp" />
