--- a/app/src/main/res/layout/activity_recipe_akt.xml
+++ b/app/src/main/res/layout/activity_recipe_akt.xml
@@ -13,6 +13,22 @@
     android:orientation="vertical"
     android:background="@mipmap/background">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_ingridients"
+        android:padding="10dp"
+        android:layout_marginBottom="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/recipe_ingridients"
+            android:id="@+id/ingridients"
+            android:elevation="1dp" />
+
+    </RelativeLayout>
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
