--- a/app/src/main/res/layout/res_tablerow.xml
+++ b/app/src/main/res/layout/res_tablerow.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="wrap_content"
     android:paddingBottom="1dp"
     android:paddingRight="1dp">
@@ -53,13 +54,11 @@
             android:id="@+id/resta_div3" />
     </LinearLayout>
 
-    <Button
-        android:text="Button"
-        android:layout_weight="25"
-        android:id="@+id/resta_button"
+    <ImageView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@android:style/Widget.Holo.Button"
-        android:backgroundTint="@android:drawable/screen_background_light_transparent"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+        app:srcCompat="@drawable/ic_edit_dark"
+        android:id="@+id/resta_button"
+         />
 
 </TableRow>
