--- a/app/src/main/res/layout/frag_exercise_description.xml
+++ b/app/src/main/res/layout/frag_exercise_description.xml
@@ -21,14 +21,14 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    app:srcCompat="@mipmap/ic_launcher"
+                    app:srcCompat="@drawable/ic_picture"
                     android:id="@+id/ex_imagebefore"
                     android:layout_weight="50" />
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    app:srcCompat="@mipmap/ic_launcher"
+                    app:srcCompat="@drawable/ic_picture"
                     android:id="@+id/ex_imageafter"
                     android:layout_weight="50" />
 
