--- a/app/src/main/res/layout/activity_credits_akt.xml
+++ b/app/src/main/res/layout/activity_credits_akt.xml
@@ -10,8 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="project.martin.bepeakedprojekt.Settings.Credits_akt"
-    android:orientation="vertical"
-    android:background="@mipmap/background">
+    android:orientation="vertical">
 
     <ScrollView
         android:layout_width="match_parent"
