--- a/app/src/main/res/layout/activity_recipe_akt.xml
+++ b/app/src/main/res/layout/activity_recipe_akt.xml
@@ -13,27 +13,48 @@
     android:orientation="vertical"
     android:background="@mipmap/background">
 
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:background="@drawable/background_ingridients"
-        android:padding="10dp"
-        android:layout_marginBottom="10dp">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/recipe_ingridients"
-            android:id="@+id/ingridients"
-            android:elevation="1dp" />
+            android:orientation="vertical"
+            android:padding="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="1">
 
-    </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/recipe_ingridients"
+                android:id="@+id/ingridients"
+                android:elevation="1dp"
+                android:textSize="18sp"
+                android:layout_marginBottom="5dp"
+                android:textColor="@color/colorAccent" />
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher"
-        android:id="@+id/rc_image" />
+            <TextView
+                android:text="@string/recipe_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textingridients" />
+
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@mipmap/ic_launcher"
+            android:id="@+id/rc_image"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:layout_marginRight="20dp"/>
+
+    </LinearLayout>
 
     <TextView
         android:text="TextView"
