Gjort klar til skift kode, brugernavn og email

--- a/app/src/main/res/layout/activity_user_akt.xml
+++ b/app/src/main/res/layout/activity_user_akt.xml
@@ -102,6 +102,26 @@
                 android:textAllCaps="false"
                 android:soundEffectsEnabled="false" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/changeUsername"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center_vertical"
+                android:text="@string/settings_changeUsername"
+                android:textAllCaps="false"
+                android:soundEffectsEnabled="false" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/changeEmail"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center_vertical"
+                android:text="@string/settings_changeEmail"
+                android:textAllCaps="false"
+                android:soundEffectsEnabled="false" />
+
         </LinearLayout>
 
     </RelativeLayout>
