--- a/app/src/main/res/layout/activity_recipe_akt.xml
+++ b/app/src/main/res/layout/activity_recipe_akt.xml
@@ -47,12 +47,12 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:srcCompat="@mipmap/ic_launcher"
             android:id="@+id/rc_image"
             android:layout_gravity="center"
-            android:layout_weight="1"
-            android:layout_marginRight="20dp"/>
+            android:layout_weight="1.5"
+            android:layout_margin="2dp"/>
 
     </LinearLayout>
 
