--- a/app/src/main/res/layout/activity_recipe_akt.xml
+++ b/app/src/main/res/layout/activity_recipe_akt.xml
@@ -33,7 +33,7 @@
                 android:text="@string/recipe_ingridients"
                 android:id="@+id/ingridients"
                 android:elevation="1dp"
-                android:textSize="18sp"
+                android:textSize="24sp"
                 android:layout_marginBottom="5dp"
                 android:textColor="@color/colorAccent" />
 
@@ -41,6 +41,7 @@
                 android:text="@string/recipe_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textSize="18sp"
                 android:id="@+id/textingridients" />
 
         </LinearLayout>
@@ -57,9 +58,19 @@
     </LinearLayout>
 
     <TextView
+        android:text="@string/recipe_opskrift_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView6"
+        android:textSize="24sp"
+        android:layout_margin="5dp"
+        android:textColor="@color/colorAccent" />
+
+    <TextView
         android:text="TextView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/rc_description"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:layout_marginLeft="5dp"/>
 </LinearLayout>
