--- a/app/src/main/res/layout/activity_user_akt.xml
+++ b/app/src/main/res/layout/activity_user_akt.xml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
-            android:id="@+id/textView5"
+            android:id="@+id/up_name"
             android:textSize="24sp"
             android:layout_marginTop="15dp"/>
 
@@ -32,7 +32,7 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/textView5"
+            android:layout_below="@+id/up_name"
             android:layout_alignParentStart="true"
             android:weightSum="1">
 
@@ -40,49 +40,56 @@
                 android:text="@string/settings_user_height"
                 android:layout_width="85dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView9"
+                android:id="@+id/up_height"
                 android:layout_marginTop="10dp"/>
 
             <TextView
                 android:text="@string/settings_user_weight"
                 android:layout_width="85dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView10"
+                android:id="@+id/up_weight"
                 android:layout_marginTop="10dp"/>
 
             <TextView
                 android:text="@string/settings_user_age"
                 android:layout_width="85dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView11"
+                android:id="@+id/up_age"
                 android:layout_marginTop="10dp"/>
+
+            <TextView
+                android:text="@string/settings_user_kostplanID"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/up_id"
+                android:layout_marginTop="10dp" />
 
             <TextView
                 android:text="@string/settings_user_calories"
                 android:layout_width="85dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView13"
+                android:id="@+id/up_cal"
                 android:layout_marginTop="10dp"/>
 
             <TextView
                 android:text="@string/settings_user_culhydrates"
                 android:layout_width="85dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView14"
+                android:id="@+id/up_col"
                 android:layout_marginTop="10dp"/>
 
             <TextView
                 android:text="@string/settings_user_protein"
                 android:layout_width="85dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView15"
+                android:id="@+id/up_prot"
                 android:layout_marginTop="10dp"/>
 
             <TextView
                 android:text="@string/settings_user_fat"
                 android:layout_width="85dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView16"
+                android:id="@+id/up_fat"
                 android:layout_marginTop="10dp"/>
 
             <TextView
